--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
@@ -28,6 +29,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
